Fix CSS bug in lists overflow

--- a/packages/custom/icu/public/assets/css/_entity-list.scss
+++ b/packages/custom/icu/public/assets/css/_entity-list.scss
@@ -5,6 +5,7 @@
     flex-direction: column;
     .entity-list-container {
         height: calc(100% - 44px);
+        overflow-y: hidden;
         .list-table {
             height: 100%;
         }
